# video-graph-summary

./: .gitignore  LICENSE  README.md  launch.sh  main.py  pyproject.toml
app/data/: download_data.py  extract_frames.py  extract_objects.py  generate_summary.py
app/data/graphvisualizations/: Big Buck Bunny 60fps 4K - Official Blender Foundation Short Film-aqz-KE-bpKQ.graphml  Big Buck Bunny 60fps 4K - Official Blender Foundation Short Film-aqz-KE-bpKQ.html  Childish Gambino - Feels Like Summer-F1B9Fk_SgI0.graphml  Childish Gambino - Feels Like Summer-F1B9Fk_SgI0.html  Peru 8K HDR 60FPS (FUHD)-1La4QzGeaaQ.graphml  Peru 8K HDR 60FPS (FUHD)-1La4QzGeaaQ.html  Placeholder Video-ScMzIvxBSi4.graphml  Placeholder Video-ScMzIvxBSi4.html  [Beading Battle #3] Menzerna Power Lock vs. Sonax Protect and Shine (Netshield)-2Xc9gXyf2G4.graphml  [Beading Battle #3] Menzerna Power Lock vs. Sonax Protect and Shine (Netshield)-2Xc9gXyf2G4.html
app/generators/: chat_retriever.py
app/graph/: subject_predicate.py
app/models/: llm_wrappers.py
app/ui/: streamlit_app.py
app/utils/: common_utils.py  constants.py
utils/: constants.py
