[project]
name = "video-graph-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.2",
    "ollama>=0.5.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyvis>=0.3.2",
    "streamlit>=1.47.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
    "yt-dlp>=2025.7.21",
]
